--- a/src/lab/exp1/Objective.html
+++ b/src/lab/exp1/Objective.html
@@ -126,6 +126,7 @@ Some of the features of the human memory that are illustrated with this model ar
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <h4>Community Links</h4>
+	      <div name="divB" style="display: none;>
         <p>
 	  <a href="http://www.sakshat.ac.in/">Sakshat Portal</a>
 	</p>
@@ -135,6 +136,7 @@ Some of the features of the human memory that are illustrated with this model ar
         <p>
 	  <a href="http://vlab.co.in/faq">FAQ : Virtual Labs</a>
 	</p>
+	</div>
       </div>
       <div class="col-lg-4 col-md-6">
         <h4>Contact Us</h4>
